initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from /Users/vylehuynhlong/Downloads/PPL/initial/src/main/d96/parser/D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'..'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Self'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'==.'", "'+.'", "'.'", "'::'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "BOOLEAN_LITERAL", "BREAK", "CONTINUE", 
                      "IF", "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", 
                      "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", "STRING", 
                      "RETURN", "NULL", "CLASS", "VAL", "VAR", "SELF", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQUAL", "ASSIGN", "NOT_EQUAL", 
                      "LESS", "LESS_OR_EQUAL", "GREATER", "GREATER_OR_EQUAL", 
                      "STRING_EQUAL", "STRING_CONCAT", "DOT", "DOUBLE_COLON", 
                      "LP", "RP", "LSP", "RSP", "LCP", "RCP", "COMMA", "SEMI", 
                      "COLON", "ID", "DOLLAR_ID", "LETTER", "WS", "ERROR_CHAR", 
                      "STRING_LITERAL", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_memberlist = 2
    RULE_nextmember = 3
    RULE_member = 4
    RULE_attribute = 5
    RULE_list_of_attribute_names = 6
    RULE_next_attribute_name = 7
    RULE_attribute_name = 8
    RULE_type_name = 9
    RULE_method = 10
    RULE_list_of_parameters = 11
    RULE_next_parameter_dec = 12
    RULE_parameter_dec = 13
    RULE_id_list = 14
    RULE_next_id = 15
    RULE_typ = 16
    RULE_constructor = 17
    RULE_destructor = 18
    RULE_indexed_array = 19
    RULE_list_of_exp = 20
    RULE_next_exp = 21
    RULE_multi_dimen_arr = 22
    RULE_array_list = 23
    RULE_next_array = 24
    RULE_primitive_type = 25
    RULE_array_type = 26
    RULE_element_type = 27
    RULE_size = 28
    RULE_class_type = 29
    RULE_index_operator = 30
    RULE_member_access = 31
    RULE_instance_att_acc = 32
    RULE_static_att_acc = 33
    RULE_instance_met_inv = 34
    RULE_static_met_inv = 35
    RULE_object_creation = 36
    RULE_exp = 37
    RULE_exp1 = 38
    RULE_exp2 = 39
    RULE_exp3 = 40
    RULE_exp4 = 41
    RULE_exp5 = 42
    RULE_exp6 = 43
    RULE_exp7 = 44
    RULE_exp8 = 45
    RULE_exp9 = 46
    RULE_exp10 = 47
    RULE_operand = 48
    RULE_subexp = 49
    RULE_statement = 50
    RULE_variable_dec = 51
    RULE_list_of_variable_names = 52
    RULE_next_variable_name = 53
    RULE_variable_name = 54
    RULE_constant_dec = 55
    RULE_list_of_constant_names = 56
    RULE_next_constant_name = 57
    RULE_constant_name = 58
    RULE_assign_statement = 59
    RULE_lhs = 60
    RULE_if_statement = 61
    RULE_for_in_statement = 62
    RULE_break_statement = 63
    RULE_continue_statement = 64
    RULE_return_statement = 65
    RULE_method_inv_statement = 66
    RULE_block_statement = 67
    RULE_list_of_statement = 68
    RULE_next_statement = 69

    ruleNames =  [ "program", "class_declaration", "memberlist", "nextmember", 
                   "member", "attribute", "list_of_attribute_names", "next_attribute_name", 
                   "attribute_name", "type_name", "method", "list_of_parameters", 
                   "next_parameter_dec", "parameter_dec", "id_list", "next_id", 
                   "typ", "constructor", "destructor", "indexed_array", 
                   "list_of_exp", "next_exp", "multi_dimen_arr", "array_list", 
                   "next_array", "primitive_type", "array_type", "element_type", 
                   "size", "class_type", "index_operator", "member_access", 
                   "instance_att_acc", "static_att_acc", "instance_met_inv", 
                   "static_met_inv", "object_creation", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "exp10", "operand", "subexp", "statement", "variable_dec", 
                   "list_of_variable_names", "next_variable_name", "variable_name", 
                   "constant_dec", "list_of_constant_names", "next_constant_name", 
                   "constant_name", "assign_statement", "lhs", "if_statement", 
                   "for_in_statement", "break_statement", "continue_statement", 
                   "return_statement", "method_inv_statement", "block_statement", 
                   "list_of_statement", "next_statement" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    INTEGER_LITERAL=3
    FLOAT_LITERAL=4
    BOOLEAN_LITERAL=5
    BREAK=6
    CONTINUE=7
    IF=8
    ELSEIF=9
    ELSE=10
    FOREACH=11
    TRUE=12
    FALSE=13
    ARRAY=14
    IN=15
    INT=16
    FLOAT=17
    BOOLEAN=18
    STRING=19
    RETURN=20
    NULL=21
    CLASS=22
    VAL=23
    VAR=24
    SELF=25
    CONSTRUCTOR=26
    DESTRUCTOR=27
    NEW=28
    BY=29
    ADD=30
    SUB=31
    MUL=32
    DIV=33
    MOD=34
    NOT=35
    AND=36
    OR=37
    EQUAL=38
    ASSIGN=39
    NOT_EQUAL=40
    LESS=41
    LESS_OR_EQUAL=42
    GREATER=43
    GREATER_OR_EQUAL=44
    STRING_EQUAL=45
    STRING_CONCAT=46
    DOT=47
    DOUBLE_COLON=48
    LP=49
    RP=50
    LSP=51
    RSP=52
    LCP=53
    RCP=54
    COMMA=55
    SEMI=56
    COLON=57
    ID=58
    DOLLAR_ID=59
    LETTER=60
    WS=61
    ERROR_CHAR=62
    STRING_LITERAL=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self.class_declaration()
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 145
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCP(self):
            return self.getToken(D96Parser.LCP, 0)

        def memberlist(self):
            return self.getTypedRuleContext(D96Parser.MemberlistContext,0)


        def RCP(self):
            return self.getToken(D96Parser.RCP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration




    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(D96Parser.CLASS)
            self.state = 148
            self.match(D96Parser.ID)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 149
                self.match(D96Parser.COLON)
                self.state = 150
                self.match(D96Parser.ID)


            self.state = 153
            self.match(D96Parser.LCP)
            self.state = 154
            self.memberlist()
            self.state = 155
            self.match(D96Parser.RCP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def nextmember(self):
            return self.getTypedRuleContext(D96Parser.NextmemberContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memberlist




    def memberlist(self):

        localctx = D96Parser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memberlist)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.member()
                self.state = 158
                self.nextmember()
                pass
            elif token in [D96Parser.RCP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextmemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def nextmember(self):
            return self.getTypedRuleContext(D96Parser.NextmemberContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_nextmember




    def nextmember(self):

        localctx = D96Parser.NextmemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nextmember)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.member()
                self.state = 164
                self.nextmember()
                pass
            elif token in [D96Parser.RCP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(D96Parser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.attribute()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_attribute_names(self):
            return self.getTypedRuleContext(D96Parser.List_of_attribute_namesContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def list_of_exp(self):
            return self.getTypedRuleContext(D96Parser.List_of_expContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 174
            self.list_of_attribute_names()
            self.state = 175
            self.match(D96Parser.COLON)
            self.state = 176
            self.type_name()
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ASSIGN:
                self.state = 177
                self.match(D96Parser.ASSIGN)
                self.state = 178
                self.list_of_exp()


            self.state = 181
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_attribute_namesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_name(self):
            return self.getTypedRuleContext(D96Parser.Attribute_nameContext,0)


        def next_attribute_name(self):
            return self.getTypedRuleContext(D96Parser.Next_attribute_nameContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_list_of_attribute_names




    def list_of_attribute_names(self):

        localctx = D96Parser.List_of_attribute_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_of_attribute_names)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.attribute_name()
            self.state = 184
            self.next_attribute_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Next_attribute_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def attribute_name(self):
            return self.getTypedRuleContext(D96Parser.Attribute_nameContext,0)


        def next_attribute_name(self):
            return self.getTypedRuleContext(D96Parser.Next_attribute_nameContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_next_attribute_name




    def next_attribute_name(self):

        localctx = D96Parser.Next_attribute_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_next_attribute_name)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(D96Parser.COMMA)
                self.state = 187
                self.attribute_name()
                self.state = 188
                self.next_attribute_name()
                pass
            elif token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_name




    def attribute_name(self):

        localctx = D96Parser.Attribute_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLAR_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_type_name




    def type_name(self):

        localctx = D96Parser.Type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def list_of_parameters(self):
            return self.getTypedRuleContext(D96Parser.List_of_parametersContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method




    def method(self):

        localctx = D96Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.state = 205
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.DOLLAR_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 198
                self.match(D96Parser.LP)
                self.state = 199
                self.list_of_parameters()
                self.state = 200
                self.match(D96Parser.RP)
                self.state = 201
                self.block_statement()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 204
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_parametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_dec(self):
            return self.getTypedRuleContext(D96Parser.Parameter_decContext,0)


        def next_parameter_dec(self):
            return self.getTypedRuleContext(D96Parser.Next_parameter_decContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_list_of_parameters




    def list_of_parameters(self):

        localctx = D96Parser.List_of_parametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list_of_parameters)
        try:
            self.state = 211
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.parameter_dec()
                self.state = 208
                self.next_parameter_dec()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Next_parameter_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def parameter_dec(self):
            return self.getTypedRuleContext(D96Parser.Parameter_decContext,0)


        def next_parameter_dec(self):
            return self.getTypedRuleContext(D96Parser.Next_parameter_decContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_next_parameter_dec




    def next_parameter_dec(self):
